Css to prevent wrapping of date column of rarities table

--- a/public/css/sass/tables.sass
+++ b/public/css/sass/tables.sass
@@ -84,8 +84,10 @@ table.listing
       text-align: left
     &.right
       text-align: right
-    &.now
+    &.lnowrap
       text-align: left
+      white-space: nowrap
+    &.cnowrap
       white-space: nowrap
     &.total
       background-color: $background_hover
